Kubernetes/Home Assisstant/home-assistant-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-ingress
  namespace: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-clusterissuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ha.boltonhomelab.com
    secretName: home-assistant-tls
  rules:
  - host: ha.boltonhomelab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant
            port:
              number: 8123
